--- a/src/css/creatorHub/organizationProfilePage.module.css
+++ b/src/css/creatorHub/organizationProfilePage.module.css
@@ -86,10 +86,11 @@
     margin-right: 1rem;
 }
 
-.organizationProfilePage .profileDetails .profileOptions >div{
+.organizationProfilePage .profileDetails .profileOptions>div {
     display: flex;
-    gap:1rem;
+    gap: 1rem;
 }
+
 .organizationProfilePage .profileDetails .profileOptions button {
     width: fit-content;
     display: flex;
@@ -103,11 +104,13 @@
     transition: all 0.2s;
     text-transform: capitalize;
 }
-.organizationProfilePage .profileDetails .profileOptions button span{
+
+.organizationProfilePage .profileDetails .profileOptions button span {
     display: flex;
     line-height: 100%;
 
 }
+
 .organizationProfilePage .profileDetails .profileOptions button:hover {
     transform: scale(0.95);
 }
@@ -195,204 +198,277 @@
     border: 1px solid #5584DF;
     background-color: #5988E250;
 }
-.organizationProfilePage
-.profileActionBtns button{
+
+.organizationProfilePage .profileActionBtns{
+    flex-wrap: wrap;
+}
+.organizationProfilePage .profileActionBtns button {
+
     font-weight: 900;
     font-size: 1rem;
+    padding:1.1rem 2rem;
+    /* padding: max(0.8rem,1vw); */
 }
-.organizationProfilePage .profileDetails .creatorPostsContainer .tabBtnWrapper{
+
+.organizationProfilePage .profileDetails .creatorPostsContainer .tabBtnWrapper {
     width: 80%;
     margin: auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap:1rem;
+    gap: 1rem;
     padding: 1rem 0;
 }
-.organizationProfilePage .profileDetails .creatorPostsContainer .tabBtnWrapper button{
+
+.organizationProfilePage .profileDetails .creatorPostsContainer .tabBtnWrapper button {
     background-color: transparent;
-    border:none;
+    border: none;
     padding: 0.5rem;
 }
-.organizationProfilePage .profileDetails .creatorPostsContainer .tabBtnWrapper button img{
-    width: 40px;
-    height: 40px;
+
+.organizationProfilePage .profileDetails .creatorPostsContainer .tabBtnWrapper button img {
+    width: 30px;
+    height: 30px;
     object-fit: contain;
     transition: all 0.2s;
 }
+
 .organizationProfilePage .profileDetails .creatorPostsContainer .tabBtnWrapper button img:hover,
-.organizationProfilePage .profileDetails .creatorPostsContainer .tabBtnWrapper button.active img{
+.organizationProfilePage .profileDetails .creatorPostsContainer .tabBtnWrapper button.active img {
     filter: brightness(900%);
 }
 
-.organizationProfilePage .profileDetails .creatorPostsContainer .tabBodyWrapper .imgCardPart{
+.organizationProfilePage .profileDetails .creatorPostsContainer .tabBodyWrapper .imgCardPart {
     transition: all 0.3s;
     cursor: pointer;
 }
-.organizationProfilePage .profileDetails .creatorPostsContainer .tabBodyWrapper .imgCardPart:hover{
+
+.organizationProfilePage .profileDetails .creatorPostsContainer .tabBodyWrapper .imgCardPart:hover {
     opacity: 0.7;
 }
-.organizationProfilePage .profileDetails .creatorPostsContainer .tabBodyWrapper .imgCardPart img{
+
+.organizationProfilePage .profileDetails .creatorPostsContainer .tabBodyWrapper .imgCardPart img {
     width: 100%;
 }
+
 /* createProfilePage start*/
-.organizationProfilePage .profileDetails 
-.creatorPostsContainer .titleText{
+.organizationProfilePage .profileDetails .creatorPostsContainer .titleText {
     font-size: 1.1rem;
     margin: 0;
     margin-top: 1rem;
     font-weight: 900;
-    
+
 }
-.organizationProfilePage .profileDetails 
-.joinedContainer {
+
+.organizationProfilePage .profileDetails .joinedContainer {
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 0.4rem 0;
 }
-.organizationProfilePage .profileDetails 
-.joinedContainer h2{
+
+.organizationProfilePage .profileDetails .joinedContainer h2 {
     font-size: 1.1rem;
     margin: 0;
     font-weight: 900;
 }
-.organizationProfilePage .profileDetails 
-.joinedContainer button{
+
+.organizationProfilePage .profileDetails .joinedContainer button {
     background-color: #098F13;
     display: flex;
     align-items: center;
     justify-content: center;
-    line-height:0%;
+    line-height: 0%;
     width: 35px;
     height: 35px;
-    font-size:1.8rem;
-    padding-top: 0.5rem;
-    color:var(--white);
+    font-size: 1.8rem;
+    /* padding-top: 0.5rem; */
+    color: var(--white);
     border-radius: 100px;
-    border:1px solid #fff;
+    border: 1px solid #fff;
 }
 
-.createProfilePage .profileDetails .imgAndFollowerPart 
-.followerPart {
+.createProfilePage .profileDetails .imgAndFollowerPart .followerPart {
     margin: 0;
 }
-.createProfilePage .profileDetails .imgAndFollowerPart 
-.followerPart .userNameText{
+
+.createProfilePage .profileDetails .imgAndFollowerPart .followerPart .userNameText {
     font-size: 1.5rem;
     font-weight: 900;
 }
-.createProfilePage .eventPassContainer{
+
+.createProfilePage .eventPassContainer {
     display: flex;
-    gap:1rem;
+    gap: 1rem;
     flex-wrap: wrap;
     width: 100%;
     padding: 2rem 0;
 }
-.createProfilePage .eventPassContainer .passContainer{
+
+.createProfilePage .eventPassContainer .passContainer {
     /* width: 50%; */
-    
+
 }
-.createProfilePage .eventPassContainer .passContainer >div{
+
+.createProfilePage .eventPassContainer .passContainer>div {
     display: flex;
     align-items: center;
 }
-.createProfilePage .eventPassContainer .passContainer h2{
+
+.createProfilePage .eventPassContainer .passContainer h2 {
     font-size: 1rem;
     font-weight: 900;
 }
-.createProfilePage .eventPassContainer .passContainer button{
+
+.createProfilePage .eventPassContainer .passContainer button {
     background-color: transparent;
-    border:none;
-    border-radius:100px;
+    border: none;
+    border-radius: 100px;
 }
-.createProfilePage .eventPassContainer .passContainer button:active{
+
+.createProfilePage .eventPassContainer .passContainer button:active {
     transform: scale(0.9);
 }
-.createProfilePage .eventPassContainer .passContainer button img{
-    width: 40px;
-}
-.createProfilePage .eventPassContainer .passContainer div >img{
-    width: 80px;
-}
-.createProfilePage .eventPassContainer .passContainer div >img.arrowIcon{
+
+.createProfilePage .eventPassContainer .passContainer button img {
     width: 40px;
 }
 
+.createProfilePage .eventPassContainer .passContainer div>img {
+    width: 80px;
+}
+
+.createProfilePage .eventPassContainer .passContainer div>img.arrowIcon {
+    width: 40px;
+}
+
+.createProfilePage .reviewContainer .headerPart {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.createProfilePage .reviewContainer .headerPart h2 {
+    font-size: 1rem;
+    font-weight: 900;
+}
+
+.createProfilePage .reviewContainer .headerPart button {
+    color: #fff;
+    font-size: 1rem;
+    font-weight: 900;
+    background-color: transparent;
+    border: none;
+}
+
+.createProfilePage .reviewContainer .reviewPart .reviewDetails h2 {
+    font-size: 1rem;
+    font-weight: 900;
+    margin-top: 0.5rem;
+}
+.createProfilePage .reviewContainer .reviewPart .reviewDetails h2 span{
+    background: var(--pageTheme3);
+    display:inline-block;
+    /* line-height: 0%; */
+    padding: 0.5rem 0.4rem 0.2rem;
+    border-radius: 5px;
+    margin:0 0.4rem;
+}
+
+.createProfilePage .toggleContainer{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
 /* createProfilePage end*/
-.viewProposalsPage .createProposalPart h2{
+.viewProposalsPage .createProposalPart h2 {
     font-size: 1rem;
 }
-.viewProposalsPage .createProposalPart button{
+
+.viewProposalsPage .createProposalPart button {
     background-color: transparent;
-    border:none;
+    border: none;
     padding: 0.9rem;
     border-radius: 100px;
     background: var(--pageTheme3);
 
 }
-.viewProposalsPage .createProposalPart button img{
+
+.viewProposalsPage .createProposalPart button img {
     width: 20px;
 }
-.viewProposalsPage .governanceProposalsPart{
+
+.viewProposalsPage .governanceProposalsPart {
     margin: 1rem 0;
 }
-.viewProposalsPage .governanceProposalsPart >h2{
+
+.viewProposalsPage .governanceProposalsPart>h2 {
     font-size: 1rem;
 }
-.viewProposalsPage .governanceProposalsPart .proposalBtcCard{
+
+.viewProposalsPage .governanceProposalsPart .proposalBtcCard {
     background: #181818;
     padding: 1rem;
     border-radius: 10px;
 
 }
-.viewProposalsPage .governanceProposalsPart .proposalBtcCard .headerPart{
+
+.viewProposalsPage .governanceProposalsPart .proposalBtcCard .headerPart {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    gap:0.5rem;
+    gap: 0.5rem;
     margin-bottom: 1rem;
 }
-.viewProposalsPage .governanceProposalsPart .proposalBtcCard .headerPart h3{
+
+.viewProposalsPage .governanceProposalsPart .proposalBtcCard .headerPart h3 {
     font-size: 1rem;
-    color:#FD7CCE;
+    color: #FD7CCE;
     margin: 0;
     font-weight: 900;
 }
-.viewProposalsPage .governanceProposalsPart .proposalBtcCard .headerPart p{
-    color:red;
+
+.viewProposalsPage .governanceProposalsPart .proposalBtcCard .headerPart p {
+    color: red;
     font-size: 0.9rem;
     font-weight: 100;
     font-family: "Nexa-Light";
     margin: 0;
 }
-.viewProposalsPage .governanceProposalsPart .proposalBtcCard .comments p{
+
+.viewProposalsPage .governanceProposalsPart .proposalBtcCard .comments p {
     font-size: 0.9rem;
     text-transform: capitalize;
-    margin: 0;   
-    font-family: "Nexa-Light"; 
+    margin: 0;
+    font-family: "Nexa-Light";
 }
-.daoChatPage h2{
+
+.daoChatPage h2 {
     font-size: 1rem;
 }
-.daoChatPage ul{
+
+.daoChatPage ul {
     padding: 0;
     margin: 2rem 0 0 1rem;
     display: flex;
-    gap:1.5rem;
+    gap: 1.5rem;
     flex-direction: column;
 }
-.daoChatPage ul li{
+
+.daoChatPage ul li {
     font-size: 0.8rem;
 }
-.progressBarOuterBox{
+
+.progressBarOuterBox {
     width: 100%;
     height: 40px;
     background-color: #313131;
     margin: 0.5rem 0;
     border-radius: 100px;
 }
-.progressBarOuterBox .progressBarInnerBox{
+
+.progressBarOuterBox .progressBarInnerBox {
     height: 100%;
     border-radius: inherit;
 }
@@ -401,4 +477,10 @@
     /* .organizationProfilePage .profileDetails .profileOptions {
         flex-wrap: wrap;
     } */
+}
+@media screen and (max-width:475px) {
+  
+    .organizationProfilePage .profileActionBtns button {
+        width: 100%;
+    }
 }
