--- a/src/css/formInputs.module.css
+++ b/src/css/formInputs.module.css
@@ -10,7 +10,7 @@
 }
 
 .inputsContainer .inputLabel {
-    color:#fff;
+    color: #fff;
     text-transform: capitalize;
     font-size: 0.9rem;
     padding: 0 0.3rem;
@@ -76,7 +76,7 @@
     text-transform: capitalize;
 }
 
-.inputsContainer .inputWrapper .reactSelectContainer{
+.inputsContainer .inputWrapper .reactSelectContainer {
     width: 100%;
 }
 
@@ -143,4 +143,54 @@
     width: 15px;
 
 }
-/* inputs end*/
+
+.toggleSwitch {
+    font-size: 17px;
+    position: relative;
+    display: inline-block;
+    width: 3em;
+    height: 1.5em;
+}
+
+.toggleSwitch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.toggleSlider {
+    position: absolute;
+    cursor: pointer;
+    inset: 0;
+    background: #979797;
+    border-radius: 50px;
+    transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+.toggleSlider:before {
+    position: absolute;
+    content: "";
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 1.5em;
+    width: 1.5em;
+    inset: 0;
+    background-color: white;
+    border-radius: 50px;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.4);
+    transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+.toggleSwitch input:checked+.toggleSlider {
+    background: #1a1a1a;
+}
+
+.toggleSwitch input:focus+.toggleSlider {
+    box-shadow: 0 0 1px #0974f1;
+}
+
+.toggleSwitch input:checked+.toggleSlider:before {
+    transform: translateX(1.6em);
+    background-color:#098F13;
+}
