--- a/src/css/signup.module.css
+++ b/src/css/signup.module.css
@@ -1,5 +1,5 @@
 .allback{
-    background: url("../Assets/Landing/landingback.png") no-repeat;
+    background: url("../../public/assets/images/Landing/landingback.png") no-repeat;
     background-size: cover;
     width: 100%;
     height: 100vh;
@@ -109,7 +109,7 @@
 .plusactivebtn::after{
     content: "";
     position: absolute;
-    background: url("../Assets/Landing/king.png") no-repeat;
+    background: url("../../public/assets/images/Landing/king.png") no-repeat;
     background-size: 100% 100%;
     display: flex;
     width: 21px;
